[project]
name = "nuro"
version = "0.1.2"
description = "Modular neural network framework by Gregor"
authors = [{ name = "Gregor" }]
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
dependencies = []

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
